<resources>
    <string name="app_name">QuizappBasic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="your_name_et_hint">Your name</string>
    <string name="app_title">Quiz App</string>
    <string name="start_quiz_btn">Start Quiz</string>
    <string name="question_placeholder">Which country does the flag belong to??</string>
    <string name="progress_text">1/10</string>
    <string name="submit">Submit</string>
    <string name="flag">Flag Image</string>
    <string name="btn_next">Go to Next Question</string>
    <string name="view_score">View Score</string>
    <string name="result_title">Result</string>
    <string name="finish">Finish</string>
    <string name="screenshot">Screenshot</string>
    <string name="tropy_image">tropy_image</string>
</resources>