<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/tropy_image" />

    <TextView
        android:id="@+id/congrats_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Congrats Denzell!" />

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        tools:text="You scored 10 out of 10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/finish"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="#ffffff" />

</LinearLayout>